첨부파일 업로드

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,15 +15,15 @@
 			<div class="jumbotron">
 				<h1>NODE.JS / EXPRESS PORTFOLIO</h1>
 				<hr>
-				<h4 class="ml-5 text-secondary">
-				Express Framework / MySQL / Multer / Passport / Mongoose 활용
+				<h4 class="ml-5 text-secondary font-weight-normal">
+					Express Framework / MySQL / Multer / Passport / Mongoose 활용
 				</h4>
 			</div>
 			<div class=" py-5 text-center">
-				<a href="/book" class="btn btn=primary">도서관리시스템</a>
-				<a href="/gallery" class="btn btn=primary">갤러리 게시판</a>
-				<a href="/board" class="btn btn=primary">일반 게시판</a>
-		</div>
+				<a href="/book" class="btn btn-primary">도서관리시스템</a>
+				<a href="/gallery" class="btn btn-primary">갤러리 게시판</a>
+				<a href="/board" class="btn btn-primary">일반 게시판</a>
+			</div>
 		</div>
 	</div>
 </body>
