--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<style>
 		.wrapper {width: 100%; height: 100vh; display: flex; justify-content: center; align-items: center;}
 	</style>
+</head>
 <body>
 	<div class="wrapper">
 		<div class="container">
@@ -19,7 +20,7 @@
 					Express Framework / MySQL / Multer / Passport / Mongoose 활용
 				</h4>
 			</div>
-			<div class=" py-5 text-center">
+			<div class="py-3 text-center">
 				<a href="/book" class="btn btn-primary">도서관리시스템</a>
 				<a href="/gallery" class="btn btn-primary">갤러리 게시판</a>
 				<a href="/board" class="btn btn-primary">일반 게시판</a>
